# wasm-thumbnail

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
python-test/: requirements.txt  test.py  wasm_thumbnail.wasm
src/: lib.rs
wasm-thumbnail/: Cargo.toml
wasm-thumbnail-js/: Cargo.toml  Makefile
wasm-thumbnail-js/src/: lib.rs
wasm-thumbnail-js/test/: index.js  package-lock.json  package.json
wasm-thumbnail-py/: setup.cfg
wasm-thumbnail-py/src/wasm_thumbnail/: __init__.py  thumbnail.py
wasm-thumbnail-py/src/wasm_thumbnail/data/: wasm_thumbnail.wasm
wasm-thumbnail-py/tests/: test.py
wasm-thumbnail-py/wasm_thumbnail/: thumbnail.py
wasm-thumbnail-rb/: Gemfile  README.md  wasm-thumbnail-rb.gemspec
wasm-thumbnail-rb/lib/wasm/thumbnail/: rb.rb
wasm-thumbnail-rb/lib/wasm/thumbnail/rb/: version.rb
wasm-thumbnail-rb/lib/wasm/thumbnail/rb/data/: wasm_thumbnail.wasm
wasm-thumbnail-rb/test/: test_helper.rb
wasm-thumbnail-rb/test/wasm/thumbnail/: rb_test.rb  shipwreck.avif
wasm-thumbnail/src/: hook.rs  lib.rs
