[package]
name = "wasm-thumbnail-js"
version = "0.1.0"
authors = ["eV <ev@7pr.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-thumbnail = { path = "../wasm-thumbnail", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.63"
# image = { version = "0.23.10", default_features = false, features = ["gif", "jpeg", "png", "webp"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
