[package]
name = "wasm-thumbnail-js"
version = "0.1.0"
authors = ["eV <ev@7pr.xyz>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-thumbnail = { path = "../wasm-thumbnail", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
