[metadata]
name = wasm-thumbnail
version = 0.0.1
author = ev Quirk
author_email = ev@7pr.xyz
description = WASM based thumbnail library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brave-intl/wasm-thumbnail
project_urls =
    Bug Tracker = https://github.com/brave-intl/wasm-thumbnail/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MPL License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.package_data]
wasm_thumbnail = data/*.wasm

[options.packages.find]
where = src
