[package]
name = "wasm-thumbnail"
version = "0.1.0"
authors = ["eV <ev@7pr.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
image = { version = "0.23.10", default_features = false, features = ["gif", "jpeg", "png", "webp"] }
